First version of VectoriaDB client and benchmark.